@@ -41,12 +41,26 @@ class arch_sh4(generic_sh):
 		self.settings["CFLAGS"]="-O2 -m4 -pipe"
 		self.settings["CHOST"]="sh4-unknown-linux-gnu"
 
+class arch_sh4a(generic_sh):
+	"Builder class for SH-4a [Little-endian]"
+	def __init__(self,myspec):
+		generic_sh.__init__(self,myspec)
+		self.settings["CFLAGS"]="-O2 -m4a -pipe"
+		self.settings["CHOST"]="sh4a-unknown-linux-gnu"
+
 class arch_sheb(generic_sheb):
 	"Builder class for SH [Big-endian]"
 	def __init__(self,myspec):
 		generic_sheb.__init__(self,myspec)
 		self.settings["CFLAGS"]="-O2 -pipe"
 		self.settings["CHOST"]="sheb-unknown-linux-gnu"
+
+class arch_sh4aeb(generic_sheb):
+	"Builder class for SH-4a [Big-endian]"
+	def __init__(self,myspec):
+		generic_sheb.__init__(self,myspec)
+		self.settings["CFLAGS"]="-O2 -m4a -pipe"
+		self.settings["CHOST"]="sh4aeb-unknown-linux-gnu"
 
 class arch_sh2eb(generic_sheb):
 	"Builder class for SH-2 [Big-endian]"
@@ -74,11 +88,12 @@ _subarch_map = {
 	"sh2"	:arch_sh2,
 	"sh3"	:arch_sh3,
 	"sh4"	:arch_sh4,
+	"sh4a"	:arch_sh4a,
 	"sheb"	:arch_sheb,
 	"sh2eb" :arch_sh2eb,
 	"sh3eb"	:arch_sh3eb,
 	"sh4eb"	:arch_sh4eb
 }
 
-_machine_map = ("sh2","sh3","sh4","sh2eb","sh3eb","sh4eb")
+_machine_map = ("sh2","sh3","sh4","sh4a","sh2eb","sh3eb","sh4eb","sh4aeb")
 
